<resources>
    <string name="app_name">UBS</string>
    <string name="continue_login_sign_up">Continue Login/Sign Up?</string>
    <string name="logo">logo</string>
    <string name="picture">picture</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="button">button</string>
    <string name="ubs_hub">UBS HUB</string>
    <string name="menu_payments">Buy/Sell</string>
    <string name="menu_Clubs">Clubs</string>
    <string name="menu_exchange">Exchange</string>
    <string name="menu_message">Message</string>
    <string name="menu_communicate">Communicate</string>
    <string name="search_here">Search Here </string>
    <string name="free_pizza">Free Pizza</string>
    <string name="textview">TextView</string>
    <string name="visit">Visit</string>
    <string name="share">Share</string>
    <string name="event_image">event_image</string>

</resources>