<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_payments"
            android:icon="@drawable/ic_baseline_attach_money_24"
            android:title="@string/menu_payments" />
        <item
            android:id="@+id/nav_clubs"
            android:icon="@drawable/ic_baseline_group_add_24"
            android:title="@string/menu_Clubs" />
    </group>

    <item android:title="@string/menu_communicate">
        <menu>

            <item
                android:id="@+id/nav_exchange"
                android:icon="@drawable/ic_baseline_share_24"
                android:title="@string/menu_exchange" />
            <item
                android:id="@+id/nav_message"
                android:icon="@drawable/ic_baseline_message_24"
                android:title="@string/menu_message" />


        </menu>
    </item>
</menu>