<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.ubs.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_payments"
        android:name="com.example.ubs.ui.payments.PaymentsFragment"
        android:label="@string/menu_payments"
        tools:layout="@layout/fragment_payments" />
    <fragment
        android:id="@+id/nav_clubs"
        android:name="com.example.ubs.ui.clubs.ClubsFragment"
        android:label="@string/menu_Clubs"
        tools:layout="@layout/fragment_clubs" />
    <fragment
        android:id="@+id/nav_message"
        android:name="com.example.ubs.ui.communication.CommunicationFragment"
        android:label="@string/menu_message"
        tools:layout="@layout/fragment_communication" />
    <fragment
        android:id="@+id/nav_exchange"
        android:name="com.example.ubs.ui.exchange.ExchangeFragment"
        android:label="@string/menu_exchange"
        tools:layout="@layout/fragment_exchange" />
    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.ubs.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.ubs.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
</navigation>